# Persistent-Homology

./: .clang-format  .gitignore  CMakeLists.txt  Package.resolved  Package.swift
Persistent Homology/: compute.metal  compute.swift  main.swift  ph_simple.swift
Persistent Homology.xcodeproj/: project.pbxproj
Persistent Homology.xcodeproj/xcshareddata/xcschemes/: Persistent Homology.xcscheme  Release.xcscheme
Persistent Homology.xcodeproj/xcuserdata/petrtsopa.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Persistent Homology.xcodeproj/xcuserdata/petrtsopa.xcuserdatad/xcschemes/: xcschememanagement.plist
Persistent Homology/input/: matrix.txt
Sources/: main.swift  matrix.swift  ph_metal.swift  ph_simple.swift  ph_sparse.swift  sparse_matrix.swift  utils.swift
Sources/MetalCompiled/: default.metallib
benchmark/: benchmark  convert
cli/: main.cpp
include/: MetalSparseMatrix.cpp  MetalSparseMatrix.hpp  ParallelSparseMatrix.cpp  ParallelSparseMatrix.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrixBase.cpp  SparseMatrixBase.hpp  ThreadPool.hpp  compute.metal
src/: IMatrix.hpp  MetalComputeWrapper.cpp  MetalComputeWrapper.hpp  MetalSparseMatrix.cpp  MetalSparseMatrix.hpp  ParallelSparseMatrix.cpp  ParallelSparseMatrix.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrixBase.cpp  SparseMatrixBase.hpp  SparseMetal.cpp  SparseMetal.hpp  ThreadPool.hpp  compute.metal  main.cpp  ph_metal.metal  sparseMatrix.swift
